
Additions:
 - Added Telluria Castle Town, the newest and greatest town in The Trail. It lies just outside the north exit of the Blazing Sands, right next to the Gulf of Telluria.
 - Added a new floor to the Abandoned North Mine.
 - Added lots of new crafting recipes for items both old and new.
 - Added 7 new skills:
  ~ Player 1, 1 skill:
   > [P] Steadfast: Passive skill learned at level 24.
  ~ Player 2, 2 skills:
   > Blood Boost: Magic skill learned at level 22.
   > Magical Breeze: Magic skill learned at level 23.
  ~ Player 3, 4 skills:
   > Group Heal: Magic skill learned at level 17 (replaces Blood Boost).
   > Curify: Magic skill learned at level 22.
   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 0 skills:
   > 
 - Added 27 new items:
  ~ 1 recovery item:
   > Water Jug
  ~ 10 materials:
   > Tellurium Dust
   > Tellurium Alloy
   > Blank Tome
   > Life Orb
   > Mana Orb
   > Mysterious Yellow Badge
   > Knight/Mage/Cleric/Rogue Token
  ~ 11 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
  ~ 5 miscellaneous:
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Andrew's Ancient Crystal of The Trail's Amazing History
 - Added 45 new equipment items:
  ~ 10 weapons:
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Hero Sword Replica
   > Tellurium Wand
   > Life Crystal Staff
   > Mana Crystal Staff
   > Bloodlust ★★
  ~ 6 shields:
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Shield
   > Vishnu's Aegis
  ~ 4 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
  ~ 2 headgear: