@@ -434,7 +434,7 @@
     ],
     "gold": 10,
     "name": "Giant Rat",
-    "note": "<Sideview Battler: NoMatchingSprite/Giant Rat>\n<Steal Item 21: 100%>\n<Steal Item 22: 75%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nTough Pelt: 10%\nRat Claw: 5%\nMetal Wristbraces: 2.5%\n</Enemy Drops>",
+    "note": "<Sideview Battler: GiantRat>\n<Steal Item 21: 100%>\n<Steal Item 22: 75%>\n<Attack Animation: 16>\n\n<Enemy Drops>\nTough Pelt: 10%\nRat Claw: 5%\nMetal Wristbraces: 2.5%\n</Enemy Drops>",
     "params": [
       100,
       12,
