@@ -11,6 +11,7 @@ Additions:
  - Added Telluria Castle Town, the newest and greatest town in The Trail. It lies just outside the north exit of the Blazing Sands, right next to the Gulf of Telluria.
  - Added a new floor to the Abandoned North Mine.
  - Added lots of new crafting recipes for items both old and new.
+ - Added roaming Giant Rats in the Dark Forest.
  - Added 7 new skills:
   ~ Player 1, 1 skill:
    > [P] Steadfast: Passive skill learned at level 24.
